Rest des tages dev master class 160925

--- a/Basics/helloWorld.html
+++ b/Basics/helloWorld.html
@@ -1,18 +1,24 @@
+<!DOCTYPE html>
+
 <html>
+
 <head>
-
-    
-<body>
-
-
-
-
-</body>
-
-
-
+    <title> Hello World </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<body>
+
+    <h1> Hello World! </h1>
+    <p> Guck was ich kann</p>
+<!--hi
 
 
+
+
+
+-->
+</body>
 </html>
+//hi
