--- a/Basics/10 - weitere inputtypes.html
+++ b/Basics/10 - weitere inputtypes.html
@@ -16,9 +16,9 @@
             <input type="radio" name="geschlecht" value="ohne-angabe" checked> ohne angabe
         </fieldset>
     </form>
-<h2>E-Mails</h2>
+    <h2>E-Mails</h2>
     <form>
-<legend>Email</legend>
+        <legend>Email</legend>
         <input type="email" name="email">
 
     </form>
@@ -26,12 +26,26 @@
 
     <h2>Lieblingsfarbe</h2>
     <form>
-        
-        <input type="color" name="color">
-
+        <input type="color" name="favcolor">
     </form>
 
+    <h2>Datum</h2>
+    <form>
+        <legend>Wähle dein Geburtstag</legend>
+        <input type="date" name="bday">
+    </form>
 
+    <h2>Schicken sie das Bild mit</h2>
+    <form>
+        <legend>File</legend>
+        <input type="file" name="myfile">
+    </form>
+
+    <h2>Wie viele Leute seid ihr?</h2>
+    <form>
+        <legend>Anzahl</legend>
+        <input type="number" name="anzahl" min="1" max="8">
+    </form>
 </body>
 
 </html>
