--- a/Basics/10 - weitere inputtypes.html
+++ b/Basics/10 - weitere inputtypes.html
@@ -19,7 +19,7 @@
     <h2>E-Mails</h2>
     <form>
         <legend>Email</legend>
-        <input type="email" name="email">
+        <input type="email" name="email" minlength="5" maxlength="20" size="40" autocomplete="off" placeholder="Deine E-Mail">
 
     </form>
 
