--- a/Basics/uebung 3.html
+++ b/Basics/uebung 3.html
@@ -2,7 +2,7 @@
 <html lang="de">
 
 <head>
-    <title> weiter inputtypen </title>
+    <title> uebung 3 </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
