--- a/Basics/00 - grundgeruest.html
+++ b/Basics/00 - grundgeruest.html
@@ -5,6 +5,11 @@
     <title> </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+
+
+    </style>
+
 </head>
 
 <body>
