--- a/Basics/16 - fonts.html
+++ b/Basics/16 - fonts.html
@@ -9,6 +9,9 @@
         p {
 
             font-family: 'Courier New', Courier, monospace;
+            font-style: italic;
+            font-weight: bolder;
+            font-size: 5vw;
         }
     </style>
 
