--- a/Basics/18 - class.html
+++ b/Basics/18 - class.html
@@ -12,13 +12,18 @@
     color: red;
     font-style: italic;
 }
+
+.grau{
+
+    background-color: gray;
+}
     </style>
 
 </head>
 
 <body>
-<h1 class="rotundkursiv">class selectop</h1>
-<p>absatz1</p>
+<h1 class="rotundkursiv grau">class selectop</h1>
+<p class="grau">absatz1</p>
 <p class="rotundkursiv">absatz2</p>
 </body>
 
