--- a/Basics/css uebung 2.html
+++ b/Basics/css uebung 2.html
@@ -6,6 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+
+p, h1{
+
+    color: aqua;
+}
 .tag{
 
     color: darkgray;
