--- a/Basics/24 - tabellen stylen.html
+++ b/Basics/24 - tabellen stylen.html
@@ -8,13 +8,25 @@
     <style>
 table{
 
-    background: red;
+    background: white;
+   /*  border-collapse: separate; */
+    width: 100%;
 }
 
-table tr{
+table th{
 
-    background: black;
+    background: palevioletred;
+    color: white;
+    text-align: left;
 }
+
+tr:nth-child(even){
+
+background-color: #f2f2f2;
+
+}
+
+
 
     </style>
 
