--- a/Basics/css uebung 3.html
+++ b/Basics/css uebung 3.html
@@ -15,6 +15,10 @@ table{
     margin-bottom: 30px;
     text-align: left;
 }
+
+
+
+
 th{
 
     background-color: lightgreen;
@@ -50,7 +54,7 @@ background-color: white;
     <h3>Gruppe A</h3>
   <table title="Gruppe A">
        <tr>
-            <th>Platz</th>
+            <th id="12345">Platz</th>
             <th>Mannschaft</th>
             <th>Torverhältnis</th>
             <th>Punkte</th>
@@ -58,7 +62,7 @@ background-color: white;
 
         <tr>
             <td>1</td>
-            <td class="Mannschaft">Deutschland</td>
+            <td class="Hier">Deutschland</td>
             <td>3:1</td>
             <td>8</td>
         </tr>
