--- a/Basics/30 - formulare stylen.html
+++ b/Basics/30 - formulare stylen.html
@@ -6,34 +6,80 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        .password {
+        
+        
+        label{
 
-            margin-top: 2px;
-            width: 100%;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: large;
+        }
+        div {
+
+
+            background-color: #f2f2f2;
+            border-radius: 10px;
+            padding: 10px;
         }
 
-        .user {
+        input[type=text],
+        input[type=password], select {
 
+width: 100%;
+font-family: 'Courier New', Courier, monospace;
+padding: 10px 15px;
+margin: 10px 0px;
+border: 1px solid #ccc;
+border-radius: 3px;
+box-sizing: border-box;
+
+        }
+
+
+        input[type=submit]{
 
             width: 100%;
+            background-color: palevioletred;
+            border: none;
+            margin: 2px 2px;
+            padding: 2px;
+            border-radius: 5px;
+            color: white;
+            cursor: pointer;
+        }
+
+        input[type=submit]:hover{
+
+
+            background-color: lightcoral;
         }
     </style>
 
 </head>
 
 <body>
-    <form>
-        <legend>Username</legend>
-        <input title="Username" class="user" name="user" type="text" placeholder="Dein Username"
-            autocomplete="off" /><br>
-        <legend>Passwort</legend>
-        <input class="password" name="password" type="password" placeholder="Dein password" autocomplete="off"> <br>
-        <legend>Wie alt bist du?</legend>
-        <input type="number" name="age" id="age" autocomplete="off"><br>
-        <legend>Username</legend>
-        <input type="submit" name="submit" id="submit" value="Register"><br>
+    <div>
+        <form>
+            <label for="uname">Username</label>
+            <input id="uname" name="user" type="text" placeholder="Dein Username" autocomplete="off" />
+            <label for="pw">Passwort</label>
+            <input id="pw" name="pw" type="password" placeholder="Dein password" autocomplete="off"> 
+            <label for="age">Wie ist dein alter?</label>
+            <select name="age" id="age">
+                <option value="unter20">Unter 20</option>
+                <option value="über20">Über 20</option>
+                <option value="über30">über 30</option>
+            </select>
 
-    </form>
+
+            <label for="submit">Register dich</label>
+
+
+
+            <input type="submit" name="Register" id="submit" value="Register">
+
+        </form>
+
+    </div>
 </body>
 
 </html>
