--- a/Basics/css uebung 4.html
+++ b/Basics/css uebung 4.html
@@ -8,14 +8,33 @@
    
 
     <style>
+img{
 
 
+    width: 100%;
+    height: 100%;
+}
+
+.Coming{
+
+    font-size: 400%;
+
+}
+
+body{
+
+    background-image: "bild.jpg";
+}
     </style>
 
 </head>
 
 <body>
    
+
+   <p id="Coming">Coming Soon</p>
+   <p id="15">...in 15 days</p>
+
 </body>
 
 </html>
