--- a/Basics/css uebung 4.html
+++ b/Basics/css uebung 4.html
@@ -8,22 +8,44 @@
    
 
     <style>
-img{
-
-
-    width: 100%;
-    height: 100%;
-}
-
-.Coming{
-
-    font-size: 400%;
-
-}
 
 body{
 
-    background-image: "bild.jpg";
+    background: url("bild.jpg") no-repeat center center fixed;
+    background-size: cover;
+
+
+}
+
+#mid{
+
+
+    color: white;
+    position: absolute;
+    left: 0;
+    top: 36%;
+    width: 100%;
+    text-align: center;
+    border: 2px solid white;
+
+}
+
+p{
+
+    font-size: 400%;
+}
+
+.smalltext{
+
+    font-size: 200%;
+}
+
+
+#topleft{
+
+    position: absolute;
+    top: 30px;
+    left: 30px;
 }
     </style>
 
@@ -31,9 +53,15 @@ body{
 
 <body>
    
+<div id="topleft"> <a href="#"><img src="https://cdn.pixabay.com/photo/2016/08/09/17/52/instagram-1581266_1280.jpg" width="100px"></a></div>
+   
+<div id="mid">
 
-   <p id="Coming">Coming Soon</p>
-   <p id="15">...in 15 days</p>
+<p>coming soon...</p>
+<p id="smalltext">in 15 days</p>
+
+</div>
+
 
 </body>
 
