--- a/CSS Expertenwissen/project_linear_gradiant_sofia_vh_vw.html
+++ b/CSS Expertenwissen/project_linear_gradiant_sofia_vh_vw.html
@@ -36,9 +36,6 @@
             background-color: black;
             color: white;
             background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-            padding-bottom: 25px;
-            padding-left: 10px;
-            padding-top: 10px;
 
         }
         
@@ -48,10 +45,10 @@
 
 <body>
     <div class="imgage-container">
-        <img src="../Basics/bild.jpg" alt="Sofia NDK">
-        <h1 class="image-heading">Burg Altona</h1>
+        <img src="../Beispiele/Expertenwissen CSS/04 - Expertenwissen CSS/sofia.jpg" alt="Sofia NDK">
+        <h1 class="image-heading">sofia</h1>
     </div>
-    <a href="project_linear_gradiant.html">Back</a>
+    <a href="project_linear_gradiant copy.html">Projektswitch</a>
 </body>
 
 </html>
