--- a/JavaScript/array.html
+++ b/JavaScript/array.html
@@ -5,7 +5,7 @@
     <title> </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+
 
     <style>
 
@@ -17,13 +17,17 @@
 <body>
 
     <p id="list"></p>
-   <script>
-const liste = new Array(1,2,3,4,5,6,7,8,9,10);
+    <script>
+        const liste = [1, 2, 3, 4, 5];
+        const freunde = ["Max", "Moritz", "Hans"];
+        const iphone = ["iphone 12", "iphone 13", "iphone 14"];
 
+        document.getElementById("list").textContent = liste;
 
-document.getElementById("list").textContent = liste;
+    </script>
 
-   </script>
+ 
+
 </body>
 
 </html>
