Add new HTML files for random number generation and quote display functionality

--- a/JavaScript/for_schleife.html
+++ b/JavaScript/for_schleife.html
@@ -18,9 +18,10 @@
    <script>
 
     "use strict";
-
-
-
+const namen = ["Anna", "Berta", "Carmen", "Dora", "Eva"];
+for (let i = 0; i < namen.length; i++) {
+    document.write("Ich bin " + namen[i] + "<br>"   );
+}
    </script>
 </body>
 
