--- a/JavaScript/project_random_zitate.html
+++ b/JavaScript/project_random_zitate.html
@@ -47,7 +47,7 @@
         #button {
 
 
-            background-color: rgb(79, 146, 204);
+            background-color: lightblue;
             width: 200px;
             height: 50px;
             border: none;
@@ -96,14 +96,18 @@
         let randomIndex = 0;
 
         let range = zitate.length;
+        let lastindex;
 
         document.getElementById("button").addEventListener("click", function () {
-
-
             randomIndex = Math.floor(Math.random() * range);
+
+            while (randomIndex === lastindex) {
+                randomIndex = Math.floor(Math.random() * range);
+            }
 
             document.getElementById("Zitat").textContent = zitate[randomIndex]
             document.getElementById("urheber").textContent = urheber[randomIndex]
+            lastindex = randomIndex;
 
 
 
