--- a/JavaScript/00 - grundgeruest.html
+++ b/JavaScript/00 - grundgeruest.html
@@ -2,10 +2,10 @@
 <html lang="de">
 
 <head>
-    <title> </title>
+  <title> </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 
     <style>
 
